--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "homepage": "https://github.com/abderrahmaneMustapha/RecipeProg#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "connect-mongodb-session": "^2.3.3",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
